# trait-distrib

./: .dockerignore  .gitignore  Dockerfile  PROJECT_BRIEF.md  README.md  config.py  justfile  main.py  pyproject.toml  stats_utils.py  streamlit_app.py  visual_utils.py
.github/: renovate.json
.github/workflows/: ci.yaml
.streamlit/: config.toml
output/metrics/: class_metrics_decision_tree.csv  class_metrics_logistic_regression.csv  class_metrics_random_forest.csv  cnn_metrics.json  confusion_matrix_cnn.csv  confusion_matrix_decision_tree.csv  confusion_matrix_logistic_regression.csv  confusion_matrix_random_forest.csv  model_comparison.csv
output/models/classifiers/best_random_forest/data/: .part-00000-1c2fda30-064a-405a-aba9-00b6b5480a11-c000.snappy.parquet.crc  .part-00000-a825513f-a958-4198-a314-68c31b8a65e2-c000.snappy.parquet.crc  .part-00000-b9b2f819-6f12-442d-8dc1-8f9adeec3e31-c000.snappy.parquet.crc  part-00000-1c2fda30-064a-405a-aba9-00b6b5480a11-c000.snappy.parquet  (+2 more)
output/models/cnn/: digit_cnn.pt
output/models/normalized_compact_pca/metadata/: .part-00000-9073b66e-b40f-4ad0-be81-f58c6ef1a9a7-c000.txt.crc  part-00000-9073b66e-b40f-4ad0-be81-f58c6ef1a9a7-c000.txt
output/preprocessing/normalized_compact_pca/test.parquet/: .part-00000-1a4b1fd3-9712-4bcc-afc3-77b303af64c1-c000.snappy.parquet.crc
output/preprocessing/normalized_compact_pca/train.parquet/: .part-00000-9b9d24d9-73e1-48b6-8c08-8adda9a2a543-c000.snappy.parquet.crc
postal_app/: __init__.py  cnn_model.py  domain.py  predictor.py  preprocessing.py
src/: config.py  data_loader.py  main.py  preprocessing.py  stats_utils.py  training.py  transformations.py  visual_utils.py
src/ml/: cnn_training.py  preprocessing.py  training.py
src/spark/: io.py  session.py
src/stats/: descriptive.py  storage.py
src/viz/: digits.py  plots.py
tests/: test_cnn_integration.py  test_cnn_model.py  test_domain.py  test_predictor.py  test_preprocessing.py  test_spark_integration.py  test_sql_analysis.py  test_streamlit_app.py
trait_distrib/ml/: preprocessing.py  training.py
trait_distrib/spark/: io.py
trait_distrib/stats/: descriptive.py  storage.py
trait_distrib/viz/: digits.py  plots.py
(+22 files in other folders)
